# actix-web-rest-api-with-jwt

./: Cargo.toml  LICENSE  README.md  README.zh-CN.md  dotenv.sample
migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
migrations/2018-12-05-031038_create_people_table/: up.sql
migrations/2018-12-06-070116_create_users_table/: up.sql
migrations/2019-02-20-054109_create_login_history_table/: up.sql
migrations/2019-02-21-045853_add_login_session_field_to_users_table/: down.sql  up.sql
src/: constants.rs  error.rs  main.rs
src/api/: address_book_controller.rs
src/config/: db.rs
src/models/: filters.rs  pagination.rs  user_token.rs
