[package]
name = "actix-web-rest-api-with-jwt"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.3.1"
actix-rt = "2.8.0"
actix-service = "2.0.2"
actix-cors = "0.6.4"
log = "0.4.18"
env_logger = "0.10.0"
diesel_migrations = "2.3.1"
serde = "1.0.163"
serde_derive = "1.0.163"
serde_json = "1.0.96"
dotenv = "0.15.0"
futures = "0.3.28"
failure = "0.1.8"
derive_more = "0.99.17"
jsonwebtoken = "8.3.0"
bcrypt = "0.14.0"
base64 = "0.21.2"

[dependencies.diesel]
version = "2.3.5"
features = ["sqlite", "returning_clauses_for_sqlite_3_35", "r2d2", "chrono"]

[dependencies.libsqlite3-sys]
version = "0.30"
features = ["bundled"]

[dependencies.chrono]
version = "0.4.26"
features = ["serde"]

[dependencies.uuid]
version = "1.3.3"
features = ["v4"]

[dev-dependencies]
testcontainers = "0.14.0"
