[package]
name = "actix-web-rest-api-with-jwt"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.1"
actix-rt = "2.11.0"
actix-service = "2.0.3"
actix-cors = "0.7.1"
log = "0.4.29"
env_logger = "0.11.8"
diesel_migrations = "2.3.1"
serde = "1.0.228"
serde_derive = "1.0.228"
serde_json = "1.0.148"
dotenv = "0.15.0"
futures = "0.3.31"
failure = "0.1.8"
derive_more = "2.1.1"
bcrypt = "0.17.1"
base64 = "0.22.1"

[dependencies.diesel]
version = "2.3.5"
features = ["sqlite", "returning_clauses_for_sqlite_3_35", "r2d2", "chrono"]

[dependencies.libsqlite3-sys]
version = "0.35"
features = ["bundled"]

[dependencies.chrono]
version = "0.4.42"
features = ["serde"]

[dependencies.uuid]
version = "1.19.0"
features = ["v4"]

[dev-dependencies]
testcontainers = "0.14.0"

[dependencies.jsonwebtoken]
version = "10.2.0"
features = ["rust_crypto"]
